# apc-cli

./: .forge-test  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.py  install.sh  llm_client.py  main.py  marketplace.py  memory.py  pyproject.toml  repositories.py  sync_helpers.py  ui.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
appliers/: __init__.py  cursor.py  gemini.py  openclaw.py  windsurf.py
docs/: devto-article.md
extractors/: __init__.py  claude.py  copilot.py  gemini.py  windsurf.py
src/: cache.py  collect.py  config.py  doctor.py  export_import.py  frontmatter_parser.py  install.py  llm_client.py  llm_config.py  main.py  mcp.py  memory.py  secrets_manager.py  share.py  skill.py  skills.py  status.py  sync_helpers.py  ui.py  unsync.py
src/apc/: cache.py  collect.py  llm_client.py  llm_config.py  main.py  marketplace.py  mcp.py  memory.py  repositories.py  share.py  skill.py  status.py  sync_helpers.py
src/appliers/: __init__.py  base.py  claude.py  copilot.py  cursor.py  gemini.py  manifest.py  openclaw.py  windsurf.py
tests/: Dockerfile  test_appliers.py  test_copilot_extractor_paths.py  test_docker_integration.py  test_dry_run.py  test_e2e.py  test_extractors.py  test_llm_config.py  test_manifest.py  test_marketplace.py  test_mcp_conflict_resolution.py  test_memory_list_remove.py  test_memory_section.py  test_repositories.py  test_security_base_url.py  test_security_input_validation.py  test_security_llm_memory_path.py  test_security_secret_handling.py  test_sync_helpers.py  test_tool_native_sync.py
(+26 files in other folders)
