[project]
name = "apc"
version = "0.1.0"
description = "AI Personal Context — sync AI agent configs across machines and tools"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[project.scripts]
apc = "apc.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
